tests/neg/i18750-format.scala
//> using options -explain

def test = 23 match
  case # => () // error
